# MintelliFunds

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  IMPROVEMENT_SUMMARY.md  LICENSE  PRODUCTION_DEPLOYMENT.md  README.md  WARP.md  chat_payload.json  conversations.db  cookies.txt  cpp_inference_client.py  create_consent_records.py  data_generator.py  data_preprocessing.py  docker-compose.yml  export_model.py  financial_model.pt  financial_model_final.pth  full_financial_data.json  full_permissions.json  insights_engine.py  llm_nlp_interface.py  model.py  nlp_interface.py  nodejs-installer.msi  package.json  privacy_manager.py  production_privacy.db  requirements.txt  revoke_permissions.py  run.bat  server.py  server_old.py  setup.bat  start-app.bat  test_app_complete.py  test_app_quick.py  test_masking.py  (+5 more)
ai_dataset/: README.md
ai_dataset/examples/: financial_queries.json
ai_dataset/prompts/: system_prompts.json
backend/: README.md  debug_csv.py  requirements.txt  run_server.py  test_advanced_analysis.py  test_ai_integration.py  test_data_ingestion.py  test_enhanced_privacy.py  test_full_api.py  test_ingestion_debug.py  test_ingestion_trace.py  test_integration_complete.py  test_nlp_analysis.py
backend/app/: __init__.py  main.py
backend/data/: accounts.json  assets.json  category_breakdown.json  credit_score.json  dashboard_insights.json  epf_balance.json  investments.json  liabilities.json  (+2 more)
include/: inference_server.h  model_loader.h
models/: best_model.pth
src/: inference_server.cpp  main.cpp  main.js  model_loader.cpp  preload.js
(+50 files in other folders)
